# nutshell

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  chat.py  cli_bugs.md  philosophy.md  porter_test_support.py  problems.md  pyproject.toml  todo.md  track.md  unit_test_support.py
_sessions/2026-03-17_15-13-55/: context.jsonl  events.jsonl  manifest.json  status.json
agenthub/agent/: CHANGELOG.md  config.yaml  skills.md  tools.md
agenthub/butterfly_dev/: config.yaml  memory.md  skills.md  tools.md
butterfly/: __init__.py
butterfly/core/: __init__.py  agent.py  hook.py  loader.py  provider.py  skill.py  tool.py  types.py
butterfly/llm_engine/: __init__.py  errors.py  model_catalog.py  models.yaml  registry.py
butterfly/runtime/: __init__.py  bridge.py  env.py  git_coordinator.py  ipc.py  server.py  watcher.py
butterfly/service/: __init__.py  config_service.py  history_service.py  hud_service.py  messages_service.py  models_service.py  sessions_service.py  tasks_service.py
butterfly/session_engine/: __init__.py  agent_config.py  agent_loader.py  (+9 more)
docs/: README.md  usage-log.md
entity/: README.md
examples/: 05_entity_agent.py  06_heartbeat_agent.py
insights/: 01-multi-agent-architecture.md  02-permission-system.md  03-cli-commands-dx.md  04-memory-system.md  05-prompt-engineering.md  06-skills-plugins-mcp.md  README.md
nutshell/: __init__.py
qjbq/: __init__.py  cli.py  server.py
scripts/: verify_token_extraction.py
tests/: README.md  conftest.py  test_agent.py  test_agent_loader_inheritance.py  test_anthropic_provider.py  test_app_notify.py  test_bash_tool.py  test_caller_detection.py  test_cap.py  test_cli_keepalive.py  test_cli_log_since.py  test_cli_main.py  test_cli_os_cmd.py  test_cli_prompt_stats.py  test_entity_catalog.py  test_entity_cli_os.py  test_entity_game_player.py  test_entity_receptionist.py  test_entity_update.py  test_entity_yisebi.py  test_fetch_url.py  test_git_coordinator.py  test_harness.py  test_ipc.py  test_layout.py  test_model_eval.py  test_new_agent.py  test_openai_provider.py  test_parent_update.py  test_persistent_agent.py  test_persistent_mode.py  test_prompt_cache.py  test_qjbq_server.py  test_reload_tool.py  test_send_to_session.py  test_session_capabilities.py  test_session_display.py  test_session_venv.py  test_spawn_session.py  test_task_cards.py  (+4 more)
ui/: README.md  __init__.py  tui.py
unit_test/: __init__.py  _runner.py  go.py  test_full_system.py  test_runner_helpers.py
(+704 files in other folders)
