[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutshell"
version = "1.3.31"
description = "A minimal Python Agent library"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "textual>=0.60.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
nutshell                = "ui.cli.main:main"
nutshell-server         = "nutshell.runtime.server:main"
nutshell-web            = "ui.web:main"
nutshell-tui            = "ui.tui:main"
nutshell-new-agent      = "ui.cli.new_agent:main"
nutshell-chat           = "ui.cli.chat:main"
nutshell-review-updates = "ui.cli.review_updates:main"
qjbq-server             = "qjbq.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nutshell", "ui", "qjbq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
