[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutshell"
version = "1.3.72"
description = "A minimal Python Agent library"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
nutshell                = "ui.cli.main:main"
qjbq-server             = "cli_app.qjbq.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nutshell", "ui", "cli_app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
